--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 				ik kan programmeren, omdat ik geïnteresseerd ben in het creëren van dingen en omdat ik deze skills nog niet heb bevorderd maar dat nog graag zou willen doen.
 			</p>
 		</div>
+		<div>
+			<h2 class="texto">Dit is een toevoeging.</h2>
+		</div>
 	</body>
 </html>
