--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
 		<div>
 			<h2 class="texto">Dit is een toevoeging.</h2>
 		</div>
+		<figure>
+			<figcaption>Dit is mijn muzieksmaak.</figcaption>
+			<audio
+			controls
+			src="Little Italy.mp3">
+			</audio>
+		</figure>
 	</body>
 </html>
