--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 			<h2 class="texto">Dit is een toevoeging.</h2>
 		</div>
 		<figure>
-			<figcaption class="texto">Dit is mijn muzieksmaak.</figcaption>
+			<figcaption>Dit is mijn muzieksmaak.</figcaption>
 			<audio
 			controls
 			src="Little Italy.mp3">
 			</audio>
 		</figure>
 		<figure>
-			<figcaption class="texto">Dit is mijn muzieksmaak 2.</figcaption>
+			<figcaption>Dit is mijn muzieksmaak 2.</figcaption>
 			<audio
 			controls
 			src="Pesos.mp3">
