--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<div>
 			<h2 class="texto">Dit is een toevoeging.</h2>
 		</div>
+		<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 		<figure>
 			<figcaption>Dit is mijn muzieksmaak.</figcaption>
 			<audio
