--- a/index.html
+++ b/index.html
@@ -25,20 +25,6 @@
 		<div>
 			<h2 class="texto">Dit is een toevoeging.</h2>
 		</div>
-		<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-		<figure>
-			<figcaption>Dit is mijn muzieksmaak.</figcaption>
-			<audio
-			controls
-			src="Little Italy.mp3">
-			</audio>
-		</figure>
-		<figure>
-			<figcaption>Dit is mijn muzieksmaak 2.</figcaption>
-			<audio
-			controls
-			src="Pesos.mp3">
-			</audio>
-		</figure>
+		<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="600" height="760" frameborder="0" allowtransparency="true" allow="encrypted-media" align="center"></iframe>
 	</body>
 </html>
