--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 				ik kan programmeren, omdat ik geïnteresseerd ben in het creëren van dingen en omdat ik deze skills nog niet heb bevorderd maar dat nog graag zou willen doen.
 			</p>
 		</div>
-		<div>
-			<h2 class="texto">Dit is een toevoeging.</h2>
+		<div style='text-align: center'>
+		<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="600" height="600" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 		</div>
-		<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="600" height="760" frameborder="0" allowtransparency="true" allow="encrypted-media" align="center"></iframe>
 	</body>
 </html>
