CU2 last version

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 			<p><i>"The importance of design is only realized when you look around you."<br>- Yara Barghout </i></p>
 		</div>
 		<div class="texto">
-			<p>Ik ben een 19-jarige tweedejaars CMD-student op de Hogeschool Rotterdam. Momenteel volg ik het CT-lab voor mijn Design Challenge.
+			<p>Ik ben een 19-jarige tweedejaars CMD-student op de Hogeschool Rotterdam. De reden waarom ik voor deze opleiding koos, is omdat ik altijd al geïnteresseerd was in het ontwerpen van digitale producten en omdat het mij altijd leuk leek om creatieve, innovatieve oplossingen voor problemen te bedenken, waar deze opleiding dus perfect op aansloot.</p>
+			<p>Momenteel volg ik het CT-lab voor de Design Challenge 5.
 				Ik hoop met de lessen van het CT-lab te leren hoe ik professionelere websites kan bouwen aan de hand van HTML en CSS en hoe
 				ik kan programmeren, omdat ik geïnteresseerd ben in het creëren van dingen en omdat ik deze skills nog niet heb bevorderd maar dat nog graag zou willen doen.
 			</p>
 		</div>
 		<div style='text-align: center'>
-		<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="600" height="600" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+			<p class="texto">Ik heb geen idee wat ik doe, ff hieronder wat uittesten lol</p>
+			<iframe src="https://open.spotify.com/embed/playlist/2kzXqAcQc891KUbmmz11UX" width="600" height="600" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 		</div>
 	</body>
 </html>
